<resources>
    <string name="app_name">Gurme</string>

    <string name="text_home">Popüler</string>
    <string name="text_search">Arama</string>
    <string name="text_nearPlaces">Yakındakiler</string>
    <string name="text_favori">Favoriler</string>
    <string name="text_profil">Profil</string>

    <string name="searchView_hint">Mekan Adı, İl veya İlçe </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bb">BBActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tum_yorumlar">TumYorumlarActivity</string>
    <string name="title_activity_near_places_maps">Map</string>

    <string name="API_URL">http://gurmeapi.xyz/api/</string>
</resources>
