<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_populer"
        android:enabled="true"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/text_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nearPlaces"
        android:enabled="true"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/text_nearPlaces"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favori"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/text_favori"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profil"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/text_profil"
        app:showAsAction="ifRoom" />
</menu>